.provarCaches/00D410000011HE0EAM/objects/BF_Setup_VAT_Declaration_line_details__c.object
<CustomObject>
    <description>BF Setup VAT Declaration line details</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active - this detail will be used in new VAT declarations
Not active - this detail will be ignored in new VAT declarations</description>
        <inlineHelpText>Active - this detail will be used in new VAT declarations
Not active - this detail will be ignored in new VAT declarations</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BF_Setup_VAT_Declaration_line__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BF_Setup_VAT_Declaration_line</label>
        <referenceTo>BF_Setup_VAT_Declaration_lines__c</referenceTo>
        <relationshipName>BF_Setup_VAT_Declaration_line_details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_input__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unchecked: (default) this detail is automatically filled from the value of the corresponding Rootstock VAT Transactions
Checked: this detail is for manual input and is not overwritten when you reload the declaration.</description>
        <inlineHelpText>Unchecked: (default) this detail is automatically filled from the value of the corresponding Rootstock VAT Transactions
Checked: this detail is for manual input and is not overwritten when you reload the declaration.</inlineHelpText>
        <label>Manual input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_source__c</fullName>
        <description>All: default value
Normal: AP input reverse charge Input (normal booking)
Reverse: AP input reverse charge (reverse booking)</description>
        <inlineHelpText>All: default value
Normal: AP input reverse charge Input (normal booking)
Reverse: AP input reverse charge (reverse booking)</inlineHelpText>
        <label>Transaction source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Reverse</fullName>
                </value>
                <value>
                    <fullName>401</fullName>
                    <isActive>false</isActive>
                    <label>401</label>
                </value>
                <value>
                    <fullName>403</fullName>
                    <isActive>false</isActive>
                    <label>403</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Class__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>VAT Class</label>
        <referenceTo>rstk__syvatclass__c</referenceTo>
        <relationshipLabel>BF Setup VAT Declaration line details</relationshipLabel>
        <relationshipName>BF_Setup_VAT_Declaration_line_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VAT_Transaction_Type__c</fullName>
        <description>Input (Accounts Payable)
Output (Accounts Receivable)</description>
        <inlineHelpText>Input (Accounts Payable)
Output (Accounts Receivable)</inlineHelpText>
        <label>VAT Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Input</fullName>
                </value>
                <value>
                    <fullName>OutPut</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BF Setup VAT Declaration line detail</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Setup line detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BF Setup VAT Declaration line details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Required_fields_if_not_manual</fullName>
        <active>true</active>
        <errorConditionFormula>Manual_input__c  = false &amp;&amp;(ISBLANK( VAT_Class__c )  || ISBLANK(TEXT(Transaction_source__c)) || ISBLANK(TEXT(VAT_Transaction_Type__c )))</errorConditionFormula>
        <errorMessage>If not manual input, then the fields VAT class, VAT Transaction type and Transaction source are required.</errorMessage>
    </validationRules>
</CustomObject>